@@ -24,6 +24,8 @@ NEW: [features/improvements]
 BUG FIXES:
 +Middle click closes the tab that was clicked on and not the active tab
 +Fix Find dialog not preserving order of lookin choices
++Fix searching in folded text not being exposed during search
++Fix random jumping to top/bottom of file during incremental search
 
 #-----------------------------------------------------------------------------#
 
